Fix title and twitter wordwrap

--- a/_sass/_fresh.sass
+++ b/_sass/_fresh.sass
@@ -348,6 +348,7 @@
       font-size: 40px
 
 .homepage-cols__tweets
+  word-wrap: break-word
   ul
     list-style-type: none
     li
